--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,51 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marcellus+SC&display=swap");
+
+body {
+  /* font-family: "Lato"; */
+  font-size: 16px;
+}
+
+section {
+  /* background-color: var(--white);
+  color: var(--black);
+  max-width: 2000px;
+  margin: auto; */
+}
+
+h1,
+h2 {
+  font-family: "Marcellus SC", monospace;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 1.8em;
+}
+p {
+  margin: 1em 0;
+}
+
 .homepagephoto {
-  width: 100%;
-  max-width: 400px;
+  width: 400px;
+  max-width: 100%;
   margin: auto;
+}
+
+.main-area {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+}
+
+.about {
+  margin: 0 0em;
+}
+
+@media screen and (min-width: 1100px) {
+  .main-area {
+    flex-direction: row;
+  }
+  .about {
+    margin: 0 2em;
+  }
 }
