--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,21 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --black: #242424;
+  --white: rgba(255, 255, 255, 0.87);
+  --primary-highlight: #a79a27;
+  --grey: rgba(217, 217, 217, 0.99);
+  --secondary-highlight: #646cff;
 
+  /* --black: #75654c;
+  --white: #e3d477;
+  --primary-highlight: #bb8644;
+  --grey: #909e84;
+  --secondary-highlight: #e8b38c; */
+
+  color-scheme: light dark;
+  background-color: var(--black);
+  color: var(--white);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,11 +26,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--primary-highlight);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--secondary-highlight);
 }
 
 body {
