--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,11 @@ section {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   font-family: "Marcellus SC", monospace;
   font-weight: 400;
+  margin: 0;
 }
 
 h2 {
@@ -25,7 +27,8 @@ p {
   margin: 1em 0;
 }
 
-.homepagephoto {
+.homepagephoto,
+.circuslivephoto {
   width: 400px;
   max-width: 100%;
   margin: auto;
