--- a/src/app.module.css
+++ b/src/app.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marcellus+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 body {
   /* font-family: "Lato"; */
@@ -15,8 +15,8 @@ section {
 h1,
 h2,
 h3 {
-  font-family: "Marcellus SC", monospace;
-  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
   margin: 0;
 }
 
@@ -34,7 +34,7 @@ p {
   margin: auto;
 }
 
-.main-area {
+.mainArea {
   display: flex;
   flex-direction: column;
   max-width: 100%;
@@ -45,7 +45,7 @@ p {
 }
 
 @media screen and (min-width: 1100px) {
-  .main-area {
+  .mainArea {
     flex-direction: row;
   }
   .about {
