--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Inter, system-ui, Avenir, Helvetica, Arial,
+    sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
-  --black: #242424;
+  --black: #3f3a3a;
   --white: rgba(255, 255, 255, 0.87);
-  --primary-highlight: #a79a27;
-  --grey: rgba(217, 217, 217, 0.99);
+  --primary-highlight: #cb8f1b;
+  --grey: #f5f5f5;
   --secondary-highlight: #646cff;
 
   /* --black: #75654c;
@@ -41,9 +44,19 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+h1,
+h2,
+h3 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 600;
+  margin: 0;
+}
+
+h2 {
+  font-size: 1.8em;
+}
+p {
+  margin: 1em 0;
 }
 
 button {
