--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --black: #3f3a3a;
   --white: rgba(255, 255, 255, 0.87);
   --primary-highlight: #cb8f1b;
-  --grey: #f5f5f5;
+  --grey: #f8f7f4;
   --secondary-highlight: #646cff;
 
   /* --black: #75654c;
@@ -37,11 +37,22 @@ a:hover {
 }
 
 body {
-  margin: 1em;
-  display: flex;
+  /* margin: 1em; */
+  /* display: flex; */
   /* place-items: center; */
   min-width: 320px;
-  min-height: 100vh;
+  max-height: 100svh;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  margin: 0;
+}
+
+.maincontainer {
+  display: grid;
+  grid-template-columns: 300px 1fr;
 }
 
 h1,
@@ -53,12 +64,8 @@ h3 {
 }
 
 h2 {
-  font-size: 1.8em;
+  font-size: 32px;
 }
-p {
-  margin: 1em 0;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
