--- a/src/components/sidebar.module.css
+++ b/src/components/sidebar.module.css
@@ -33,14 +33,28 @@
   color: var(--primary-highlight);
 }
 
+.socialButtons {
+}
+
 .socialButtons i {
-  color: var(--primary-highlight);
-  font-size: 3em;
-  padding-right: 0.3em;
+  color: var(--black);
+  background-color: var(--primary-highlight);
+  font-size: 2em;
+  margin-right: 0.5em;
   transition: all 0.5s ease;
+  border-radius: 50%;
+  height: 1.3em;
+  width: 1.3em;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .socialButtons i:hover {
-  color: var(--secondary-highlight);
-  scale: 1.05;
+  /* color: var(--primary-highlight); */
+  background-color: var(--secondary-highlight);
+  scale: 1.07;
+}
+
+.socialButtons a {
 }
