--- a/src/components/contact.module.css
+++ b/src/components/contact.module.css
@@ -8,14 +8,14 @@
   max-width: 50%;
 }
 
-.socialButtons {
-  padding: 2em 0;
-}
-
 @media screen and (max-width: 1100px) {
   .contact {
-    height: 100vh;
-    padding: 2em;
+    height: 100svh;
+    padding: 0 2em 0;
+  }
+
+  .contact h2 {
+    margin-top: 2em;
   }
 
   .contact p {
