--- a/src/components/homepage.module.css
+++ b/src/components/homepage.module.css
@@ -55,6 +55,10 @@
   object-fit: cover;
 }
 
+.socialContainer {
+  display: none;
+}
+
 @media screen and (max-width: 1100px) {
   .homepage {
     grid-template-columns: 1fr;
@@ -84,6 +88,11 @@
     max-width: 90%;
     max-height: 600px;
     object-fit: cover;
+    background-color: var(--grey);
+  }
+
+  .socialContainer {
+    display: block;
     background-color: var(--grey);
   }
 }
