--- a/src/components/gallery.module.css
+++ b/src/components/gallery.module.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.galleryContainer h2 {
+  margin: 1em auto;
+}
+
 .photogrid {
   width: 60vw;
   height: auto;
@@ -9,8 +13,19 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 200px;
   gap: 2em;
-  border: 6px solid var(--primary-highlight);
+  /* border: 6px solid var(--primary-highlight); */
   border-radius: 0.5em;
   padding: 1em;
   margin: 1em auto;
+  align-items: center;
+}
+
+@media screen and (max-width: 1100px) {
+  .photogrid {
+    width: 90vw;
+
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 1em;
+  }
 }
