add photos to /public and add placeholder photogallery

--- a/src/components/mobilenav.module.css
+++ b/src/components/mobilenav.module.css
@@ -17,7 +17,7 @@
 }
 
 .mobilenavcontainer button {
-  background-color: var(--grey);
+  background-color: transparent;
   color: var(--primary-highlight);
   position: fixed;
   top: 10px;
