--- a/src/components/gallery.module.css
+++ b/src/components/gallery.module.css
@@ -1,9 +1,11 @@
 .galleryContainer {
   text-align: center;
+  /* background-color: var(--grey); */
 }
 
 .galleryContainer h2 {
   margin: 1em auto;
+  /* color: var(--black); */
 }
 
 .photogrid {
@@ -11,7 +13,7 @@
   height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 200px;
+  /* grid-template-rows: 200px; */
   gap: 2em;
   /* border: 6px solid var(--primary-highlight); */
   border-radius: 0.5em;
